--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Proyecto</title>
 </head>
 <body>
+    <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-sm bg-primary rounded-0">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -30,63 +31,62 @@
           </li>
         </ul>
       </nav>
-
+    <!--Jumbotron-->
     <div class="jumbotron rounded-0 img-jmbo">
         <div class="container-fluid">
             <h1 class="text-center">Registro de Datos Generales</h1>
             <h4 class="text-center">Bienvenidos alumnos de nuevo ingreso</h4>
         </div>
     </div>
-
+    <!--Caja de contacto-->
     <div class="contact-box">
     <div class="container p-6 bg-dark">
         <div class="user-img">
             <img src="img/escudoESCOM.png" class="img-fluid img-thumbnail rounded-circle mx-auto d-block" alt="ESCOM">
         </div>
-        <form action= "agradecimiento.html" method="get" enctype="multipart/form-data" autocomplete="off">
+        <!--Formulario-->
+        <form action= "agradecimiento.html" method="POST" enctype="multipart/form-data" class="needs-validation" autocomplete="off" novalidate>
             <fieldset>
                 <legend class="font-weight-bold" id="identidad">Identidad</legend>
                 <div class="row mt-3">
                     <div class="form-group col-md-4">
                         <label for="boleta">No. de boleta<span class="text-danger">*</span></label>
-                        <input type="number" id="boleta" name="boleta" size="10" maxlength="10" class="form-control" placeholder="Boleta"> 
+                        <input type="number" id="boleta" name="boleta" size="10" maxlength="10" class="form-control" placeholder="Boleta" required> <div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un no. de boleta válido</div>
                     </div>
                     <div class="form-group col-md-8">
-                        <label for="nombre">Nombre<span class="text-danger">*</span></label>
-                        <input type="text" id="nombre" name="nombre" size="10" maxlength="20" placeholder="Ingrese el nombre" class="form-control">
+                        <label for="nombre">Nombre(s)<span class="text-danger">*</span></label>
+                        <input type="text" id="nombre" name="nombre" size="10" maxlength="20" placeholder="Ingrese el nombre" class="form-control" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su(s) nombre(s)</div>
                     </div>
                 </div>
                 <div class="row mt-2">
                     <div class="form-group col-md-6">
                         <label for="apellidop">Apellido Paterno<span class="text-danger">*</span></label>
-                        <input type="text" id="apellidop" name="apellidop" size="10" maxlength="15" class="form-control" placeholder="Ingrese Apellido Paterno">
+                        <input type="text" id="apellidop" name="apellidop" size="10" maxlength="15" class="form-control" placeholder="Ingrese Apellido Paterno" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su apellido paterno</div>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="apellidom">Apellido Materno<span class="text-danger">*</span></label>
-                        <input type="text" id="apellidom" name="apellidom" size="10" maxlength="15" placeholder="Ingrese Apellido Materno" class="form-control">
+                        <input type="text" id="apellidom" name="apellidom" size="10" maxlength="15" placeholder="Ingrese Apellido Materno" class="form-control" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su apellido materno</div>
                     </div>
                 </div>
                 <div class="row mt-2">
                     <div class="form-group col-xl-3 col-md-6">
-                        <label for="sexo" class="mb-3">G&eacute;nero<span class="text-danger">*</span></label>
-                        <div class="form-check">
-                            <label class="form-check-label" for="radio1">
-                                <input type="radio" class="form-check-input" name="sexo" id="radio1" value="masculino">Masculino
-                            </label>
+                        <label class="mb-3">G&eacute;nero<span class="text-danger">*</span></label>
+                        <div class="custom-control custom-radio">
+                            <input type="radio" class="custom-control-input" name="sexo" id="radio1" value="masculino" required>
+                            <label class="custom-control-label" for="radio1">Masculino</label>
                         </div>
-                        <div class="form-check">
-                            <label class="form-check-label mb-3" for="radio2">
-                                <input type="radio" class="form-check-input" name="sexo" id="radio2" value="femenino">Femenino
-                            </label>
+                        <div class="custom-control custom-radio">
+                            <input type="radio" class="custom-control-input" name="sexo" id="radio2" value="femenino" required>
+                            <label class="custom-control-label" for="radio2">Femenino</label><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su género</div>
                         </div>
                     </div>
                     <div class="form-group col-xl-3 col-md-6">
                         <label for="fecha">Fecha de nacimiento<span class="text-danger">*</span></label>
-                        <input type="date" id="fecha" name="fecha" size="5" class="form-control">
+                        <input type="date" id="fecha" name="fecha" size="5" class="form-control" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su fecha de nacimiento</div>
                     </div>
                     <div class="form-group col-xl-6">
                         <label for="curp">CURP<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" style="text-transform: uppercase;" id="curp" name="curp" size="18" maxlength="18">
+                        <input type="text" class="form-control" style="text-transform: uppercase;" id="curp" name="curp" size="18" maxlength="18" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un CURP válido</div>
                     </div>
             </div>
             </fieldset>
@@ -95,27 +95,27 @@
                 <legend class="font-weight-bold" id="contacto">Contacto</legend>
                 <div class="form-group mt-3">
                     <label for="calleynum">Calle y N&uacute;mero<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="calleynum" name="calleynum" size="10" maxlength="25">
+                    <input type="text" class="form-control" id="calleynum" name="calleynum" size="10" maxlength="25" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su calle y número</div>
                 </div>
                 <div class="row mt-2">
                     <div class="form-group col-md-8">
                         <label for="col">Colonia<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="col" name="col" size="10" maxlength="20">
+                        <input type="text" class="form-control" id="col" name="col" size="10" maxlength="20" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su colonia</div>
                     </div>
                     
                     <div class="form-group col-md-4">
                         <label for="postal">C&oacute;digo Postal<span class="text-danger">*</span></label>
-                        <input type="number" class="form-control" id="postal" name="postal" size="10" maxlength="8">
+                        <input type="number" class="form-control" id="postal" name="postal" size="10" maxlength="8" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su código postal</div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-5">
                         <label for="tel">Tel&eacute;fono o celular<span class="text-danger">*</span></label>
-                        <input type="number" class="form-control" id="tel" name="tel" size="10" maxlength="12">
+                        <input type="number" class="form-control" id="tel" name="tel" size="10" maxlength="12" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un teléfono válido</div>
                     </div>
                     <div class="form-group col-md-7">
                         <label for="correo">Correo Electr&oacute;nico<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="correo" name="correo" size="10" maxlength="50">
+                        <input type="text" class="form-control" id="correo" name="correo" size="10" maxlength="50" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un correo electrónico válido</div>
                     </div>
                 </div>
             </fieldset>
@@ -126,8 +126,8 @@
                 <div class="row mt-3">
                     <div class="form-group col-lg-6">
                         <label for = "escuela">Escuela de procedencia<span class="text-danger">*</span></label>
-                        <select class="form-control" id = "escuela" name = "escuela">
-                            <option value = "escSel" selected = "selected"> Selecciona tu escuela de procedencia</option>
+                        <select class="form-control" id = "escuela" name = "escuela" required>
+                            <option value = "" selected = "selected"> Selecciona tu escuela de procedencia</option>
                             <option value = "cecyt1">CECyT 1 “Gonzalez Vazquez Vega"</option>
                             <option value = "cecyt2">CECyT 2 "Miguel Bernard"</option>
                             <option value = "cecyt3">CECyT 3 "Estanislao Ramirez Ruiz"</option>
@@ -149,12 +149,12 @@
                             <option value = "cecyt19">CECyT 19 “Leona Vicario”</option>
                             <option value = "cet1">CET 1 “Walter Cross Buchanan”</option>
                             <option value = "otro">Otro</option>
-                        </select>
+                        </select><div class="valid-feedback">¡Ok!</div><div class="invalid-feedback">Por favor, seleccione una escuela de procedencia</div>
                     </div>
                     <div class="form-group col-lg-6">
                         <label for = "estado">Entidad federativa de procedencia<span class="text-danger">*</span></label>
-                        <select class="form-control" id = "estado" name = "estado">
-                            <option value = "estSel" selected = "selected"> Selecciona tu estado de procedencia</option>
+                        <select class="form-control" id = "estado" name = "estado" required> 
+                            <option value = "" selected = "selected"> Selecciona tu estado de procedencia</option>
                             <option value = "est1">Aguascalientes</option>
                             <option value = "est2">Baja California</option>
                             <option value = "est3">Baja California Sur</option>
@@ -187,7 +187,7 @@
                             <option value = "est30">Veracruz</option>
                             <option value = "est31">Yucatan</option>
                             <option value = "est32">Zacatecas</option>
-                        </select>
+                        </select><div class="valid-feedback">¡Ok!</div><div class="invalid-feedback">Por favor, seleccione una entidad federativa de procedencia</div>
                     </div>
                 </div>
                 <div class="form-group mt-2">
@@ -197,18 +197,18 @@
                 <div class="row mt-2">
                     <div class="form-group col-md-5">
                         <label for = "escPromedio">Promedio<span class="text-danger">*</span></label>
-                        <input type = "number" class="form-control" id = "escPromedio" name = "promedio" min = "0" max = "10">
+                        <input type = "number" class="form-control" id = "escPromedio" name = "promedio" min = "0" max = "10" required><div class="valid-feedback">¡Ok!</div><div class="invalid-feedback">Por favor, registre su promedio</div>
                     </div>
                             
                     <div class="form-group col-md-7">
                         <label for = "opcionEscom">ESCOM fue tu<span class="text-danger">*</span></label>
-                        <select class="form-control" id = "opcionEscom" name = "opcionEscom">
-                            <option value = "estSel" selected = "selected"> Selecciona la opcion</option>
+                        <select class="form-control" id = "opcionEscom" name = "opcionEscom" required>
+                            <option value = "" selected = "selected"> Selecciona la opcion</option>
                             <option value = "opc1">Primera opcion</option>
                             <option value = "opc2">Segunda opcion</option>
                             <option value = "opc3">Tercera opcion</option>
                             <option value = "opc4">Cuarta opcion</option>
-                        </select>
+                        </select><div class="valid-feedback">¡Ok!</div><div class="invalid-feedback">Por favor, seleccione una opción</div>
                     </div>
                 </div>
             </fieldset>
@@ -219,7 +219,27 @@
     </div>
     </div>
 
-
+    <!--Validacion de formulario por JScript-->
+    <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function() {
+    'use strict';
+    window.addEventListener('load', function() {
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.getElementsByClassName('needs-validation');
+        // Loop over them and prevent submission
+        var validation = Array.prototype.filter.call(forms, function(form) {
+        form.addEventListener('submit', function(event) {
+            if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+            }
+            form.classList.add('was-validated');
+        }, false);
+        });
+    }, false);
+    })();
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
