--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--Hoja de estilos-->
+    <link rel="preload" href="css/style.css" as="style" />
+    <link href="css/style.css" rel="stylesheet">
     
     <!--Estilo fuente: Roboto-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,31 +24,52 @@
     <nav class="navbar navbar-expand-sm bg-primary rounded-0">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold" href="#identidad">Identidad</a>
+            <a class="nav-link text-white font-weight-bold zoom" href="#identidad">Identidad</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold" href="#contacto">Contacto</a>
+            <a class="nav-link text-white font-weight-bold zoom" href="#contacto">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold" href="#procedencia">Procedencia</a>
+            <a class="nav-link text-white font-weight-bold zoom" href="#procedencia">Procedencia</a>
           </li>
         </ul>
       </nav>
+
     <!--Jumbotron-->
     <div class="jumbotron rounded-0 img-jmbo">
-        <div class="container-fluid">
-            <h1 class="text-center">Registro de Datos Generales</h1>
-            <h4 class="text-center">Bienvenidos alumnos de nuevo ingreso</h4>
+        <div class="container-fluid console-container">
+           <span id='text1'></span><div class='console-underscore' id='console'>&#95;</div>
+        </div>
+        <div class="col text-center mt-4">
+            <a href="recuperar.html" class="btn btn-danger" role="button" target="_blank">Recuperar PDF</a>
         </div>
     </div>
+    
+    <!--Escudos-->
+    <div class="container p-4 bg-dark mb-5 roundend-0">
+        <div class="row">
+            <div class="col-md-3 escom-img">
+            <img src="img/escudoESCOM.png" width="180" height="150" class="img-responsive mx-auto d-block zoom centrar-img"" alt="ESCOM">
+            </div>
+            <div class="col-md-6 "></br>
+                <h2 class="text-center resize1">Instituto Politécnico Nacional</h2>
+                <h3 class="text-center resize2">Escuela Superior de Cómputo</h3>
+            </div>
+            <div class="col-md-3 ipn-img">
+            <img src="img/ipn.png" width="150" height="180" class="img-responsive mx-auto d-block zoom centrar-img"" alt="IPN">
+            </div>
+        </div>
+    </div>
+
     <!--Caja de contacto-->
     <div class="contact-box">
     <div class="container p-6 bg-dark">
-        <div class="user-img">
-            <img src="img/escudoESCOM.png" class="img-fluid img-thumbnail rounded-circle mx-auto d-block" alt="ESCOM">
+        <div class="user-img"> 
+            <img src="img/user.png" class="img-fluid img-thumbnail rounded-circle mx-auto d-block zoom" alt="ESCOM">
         </div>
         <!--Formulario-->
         <form action= "agradecimiento.html" method="POST" enctype="multipart/form-data" class="needs-validation" autocomplete="off" novalidate>
+
             <fieldset>
                 <legend class="font-weight-bold" id="identidad">Identidad</legend>
                 <div class="row mt-3">
@@ -55,7 +79,7 @@
                     </div>
                     <div class="form-group col-md-8">
                         <label for="nombre">Nombre(s)<span class="text-danger">*</span></label>
-                        <input type="text" id="nombre" name="nombre" size="10" maxlength="20" placeholder="Ingrese el nombre" class="form-control" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su(s) nombre(s)</div>
+                        <input type="text" id="nombre" name="nombre" size="10" maxlength="20" placeholder="Ingrese el nombre" class="form-control"  pattern="^[a-zA-ZÁ-ÿ\s]{1,40}$" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Por favor, registre su(s) nombre(s)</div>
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -86,10 +110,9 @@
                     </div>
                     <div class="form-group col-xl-6">
                         <label for="curp">CURP<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" style="text-transform: uppercase;" id="curp" name="curp" size="18" maxlength="18" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un CURP válido</div>
+                        <input type="text" class="form-control" style="text-transform: uppercase;" id="curp" name="curp" size="18" maxlength="18" pattern ="^[A-Z]{1}[AEIOU]{1}[A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|1[0-9]|2[0-9]|3[0-1])[HM]{1}(AS|BC|BS|CC|CS|CH|CL|CM|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[0-9A-Z]{1}[0-9]{1}$" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un CURP válido</div>
                     </div>
-            </div>
-            </fieldset>
+                </div>
 
             <fieldset class="mt-5">
                 <legend class="font-weight-bold" id="contacto">Contacto</legend>
@@ -119,7 +142,6 @@
                     </div>
                 </div>
             </fieldset>
-
 
             <fieldset class="mt-5">
                 <legend class="font-weight-bold" id="procedencia">Procedencia</legend>
@@ -220,30 +242,15 @@
     </div>
 
     <!--Validacion de formulario por JScript-->
-    <script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function() {
-    'use strict';
-    window.addEventListener('load', function() {
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.getElementsByClassName('needs-validation');
-        // Loop over them and prevent submission
-        var validation = Array.prototype.filter.call(forms, function(form) {
-        form.addEventListener('submit', function(event) {
-            if (form.checkValidity() === false) {
-            event.preventDefault();
-            event.stopPropagation();
-            }
-            form.classList.add('was-validated');
-        }, false);
-        });
-    }, false);
-    })();
-    </script>
+    <script language="javascript" type="text/javascript" src="js/script1.js"></script>
+    <!--Texto por consola-->
+    <script language="javascript" type="text/javascript" src="js/script2.js"></script>
+    <noscript>El navegador no soporta Javascript</noscript>
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
