--- a/recuperar.html
+++ b/recuperar.html
@@ -21,8 +21,10 @@
 </head>
 <body>
     <div class="jumbotron rounded-0 img-jmbo text-center">
-        <h1>Recuperar PDF</h1>
-        <p>Ingrese su número de boleta para recuperar su PDF</p>
+        <div class="container"><br>
+            <h1>Recuperar PDF</h1>
+            <p>Ingrese su número de boleta para recuperar su PDF</p>
+        </div>
     </div>
 
      <!--Escudos-->
