--- a/index.html
+++ b/index.html
@@ -20,33 +20,44 @@
     <title>Proyecto</title>
 </head>
 <body>
-    <!--Barra de navegacion-->
-    <nav class="navbar navbar-expand-sm bg-primary rounded-0">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold zoom" href="#identidad">Identidad</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold zoom" href="#contacto">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white font-weight-bold zoom" href="#procedencia">Procedencia</a>
-          </li>
-        </ul>
-      </nav>
+   
 
     <!--Jumbotron-->
-    <div class="jumbotron rounded-0 img-jmbo">
-        <div class="container-fluid console-container">
+    <div class="jumbotron jumbotron-fluid rounded-0 img-jmbo" style="margin-bottom:0">
+        <div class="container console-container mt-2">
            <span id='text1'></span><div class='console-underscore' id='console'>&#95;</div>
         </div>
         <div class="col text-center mt-4">
             <a href="recuperar.html" class="btn btn-danger" role="button" target="_blank">Recuperar PDF</a>
+            
         </div>
     </div>
+
+     <!--Barra de navegacion-->
+     <nav class="navbar navbar-expand-md sticky-top rounded-0 navbar-dark bg-primary">
+        <a class="navbar-brand font-weight-bold zoom" href="#">
+            <img src="img/escudoESCOM.png" alt="IPN" style="width:40px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#identidad">Identidad</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#procedencia">Procedencia</a>
+            </li>
+            </ul>
+        </div>
+      </nav>
     
     <!--Escudos-->
-    <div class="container p-4 bg-dark mb-5 roundend-0">
+    <div class="container p-4 bg-dark mb-5 mt-5 roundend-0">
         <div class="row">
             <div class="col-md-3 escom-img">
             <img src="img/escudoESCOM.png" width="180" height="150" class="img-responsive mx-auto d-block zoom centrar-img"" alt="ESCOM">
@@ -240,7 +251,6 @@
         <small class="d-inline-block text-muted mt-2">Instituto Politécnico Nacional | Escuela Superior de Cómputo | 2021</small>
     </div>
     </div>
-
     <!--Validacion de formulario por JScript-->
     <script language="javascript" type="text/javascript" src="js/script1.js"></script>
     <!--Texto por consola-->
