--- a/actualizar.html
+++ b/actualizar.html
@@ -10,7 +10,7 @@
 <script src="/../Proyecto WEB/js/validarCampo.js"></script>
 
 <body>
-    <h1>Actualizar registro de alumno dudas con</h1>
+    <h1>Actualizar registro de alumno</h1>
     <a href="/../Proyecto WEB/php/Administrador.php">Regresar</a>
     <a href="/../Proyecto WEB/php/CerrarSesion.php">Cerrar Sesion</a>
     <form action="/../Proyecto WEB/php/ActualizarRegistro.php" method="post" onsubmit="return valCampo()">
