--- a/recuperar.html
+++ b/recuperar.html
@@ -7,11 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../Proyecto WEB/css/bootstrap.min.css">
 
     <!--Hoja de estilos-->
-    <link rel="preload" href="css/style.css" as="style" />
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="preload" href="/../Proyecto WEB/css/style.css" as="style" />
+    <link href="/../Proyecto WEB/css/style.css" rel="stylesheet">
+
+    <!--Font Awesome Iconos-->
+    <link href="/../Proyecto WEB/css/all.css" rel="stylesheet">
+    <script defer src="/Proyecto WEB/js/all.js"></script>
 
     <!--Estilo fuente: Roboto-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,31 +24,40 @@
     <title>Recuperar PDF</title>
 </head>
 <body>
+    <!--Jumbotron-->
     <div class="jumbotron rounded-0 img-jmbo text-center">
         <div class="container"><br>
             <h1>Recuperar PDF</h1>
             <p>Ingrese su número de boleta para recuperar su PDF</p>
+            <!--Botón para regresar-->
+            <div class="col text-center mt-4">
+                <a href="/../Proyecto WEB/formulario.html" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
+            </div>
         </div>
     </div>
 
-     <!--Escudos-->
-     <div class="container p-4 bg-dark mb-5 roundend-0">
+     <!--Escudos ESCOM IPN-->
+     <div class="container p-4 bg-dark mb-3 roundend-0">
         <div class="row">
             <div class="col-md-3 escom-img">
-            <img src="img/escudoESCOM.png" width="180" height="150" class="img-responsive mx-auto d-block zoom centrar-img"" alt="ESCOM">
+            <img src="/../Proyecto WEB/img/escudoESCOM.png" width="180" height="150" class="img-responsive mx-auto d-block zoom centrar-img" alt="ESCOM">
             </div>
             <div class="col-md-6 "></br>
                 <h2 class="text-center resize1">Instituto Politécnico Nacional</h2>
                 <h3 class="text-center resize2">Escuela Superior de Cómputo</h3>
             </div>
             <div class="col-md-3 ipn-img">
-            <img src="img/ipn.png" width="150" height="180" class="img-responsive mx-auto d-block zoom centrar-img"" alt="IPN">
+            <img src="/../Proyecto WEB/img/ipn.png" width="150" height="180" class="img-responsive mx-auto d-block zoom centrar-img"" alt="IPN">
             </div>
         </div>
     </div>
 
     <div class="contact-box">
     <div class="container bg-dark p-6">
+        <div class="user-img">
+            <img src="/../Proyecto WEB/img/estudiante.png" class="img-fluid img-thumbnail rounded-circle mx-auto d-block zoom " alt="ESCOM ">
+        </div>
+        <!--Formulario Recuperar-->
         <form class="needs-validation" autocomplete="off" novalidate>
             <div class="form-group">
                 <label for="boleta">No. de boleta<span class="text-danger">*</span></label>
@@ -56,15 +69,20 @@
     </div>
     </div>
 
+    <!--Footer-->
+    <div class="container-fluid bg-dark text-center p-3">
+        <p class="small">&copy;Todos los derechos reservados a la Escuela Superior de Cómputo</p>
+    </div>
+
     <!--Validacion de formulario por JScript-->
-    <script language="javascript" type="text/javascript" src="js/script1.js"></script>
+    <script language="javascript" type="text/javascript" src="/../Proyecto WEB/js/script1.js"></script>
     <noscript>El navegador no soporta Javascript</noscript>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/../Proyecto WEB/js/bootstrap.min.js"></script>
 
 </body>
 </html>
