--- a/formulario.html
+++ b/formulario.html
@@ -62,15 +62,9 @@
             <span id='text1'></span>
             <div class='console-underscore' id='console'>&#95;</div>
         </div>
-        <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6 text-right mt-4">
-                <a href="/../Proyecto WEB/index.html" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
-            </div>
-            <div class="col-md-6 text-left mt-4">
-                <a href="/../Proyecto WEB/recuperar.html" class="btn btn-danger" role="button">Recuperar PDF <i class="fas fa-file-pdf"></i> </a>
-            </div>
-        </div>
+        <div class="col text-center mt-4">
+            <a href="/../Proyecto WEB/index.html" class="btn btn-success mr-3 mb-3" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
+            <a href="/../Proyecto WEB/recuperar.html" class="btn btn-danger mb-3" role="button">Recuperar PDF <i class="fas fa-file-pdf"></i></a>
         </div>
     </div>
 
@@ -121,7 +115,7 @@
                 <img src="/../Proyecto WEB/img/estudiante.png" class="img-fluid img-thumbnail rounded-circle mx-auto d-block zoom " alt="ESCOM ">
             </div>
             <!--Formulario-->
-            <form action="/../Proyecto WEB/php/InsertarMySQL.php" method="POST" enctype="multipart/form-data" class="needs-validation " autocomplete="off " novalidate onsubmit="return validacion()">
+            <form action="/../Proyecto WEB/php/InsertarMySQL.php" method="POST" enctype="multipart/form-data" class="needs-validation" autocomplete="off " novalidate onsubmit="return validacion()">
 
                 <fieldset>
                     <legend class="font-weight-bold " id="identidad">Identidad</legend>
@@ -321,18 +315,18 @@
                             <div class="form-group col-md-7">
                                 <label for="opcionEscom">ESCOM fue tu<span class="text-danger">*</span></label>
                                 <select class="form-control" id="opcionEscom" name="opcionEscom" required>
-                                    <option value = "" selected = "selected"> Selecciona la opción</option>
-                                    <option value = "Primera opción">Primera opción</option>
-                                    <option value = "Segunda opción">Segunda opción</option>
-                                    <option value = "Tercera opción">Tercera opción</option>
-                                    <option value = "Cuarta opción">Cuarta opción</option>
+                                    <option value = "" selected = "selected"> Selecciona la opcion</option>
+                                    <option value = "Primera opcion">Primera opcion</option>
+                                    <option value = "Segunda opcion">Segunda opcion</option>
+                                    <option value = "Tercera opcion">Tercera opcion</option>
+                                    <option value = "Cuarta opcion">Cuarta opcion</option>
                                 </select>
                                 <div class="valid-feedback" id="valEscom">¡Ok!</div>
                                 <div class="invalid-feedback" id="valNoEscom">Por favor, seleccione una opción</div>
                             </div>
                         </div>
                     </fieldset>
-                    <input type="reset" class="btn btn-outline-light mt-4" value="Limpiar" />
+                    <input type="reset" class="btn btn-outline-light btn-lg mt-4" value="Limpiar" />
                     <input type="submit" class="btn btn-primary btn-lg btn-block mt-4" value="Enviar" />
             </form>
             <small class="d-inline-block text-muted mt-2">Instituto Politécnico Nacional | Escuela Superior de Cómputo | 2021</small>
@@ -340,7 +334,7 @@
     </div>
 
     <!--Footer-->
-    <div class="container-fluid bg-dark text-center p-3">
+    <div class="container-fluid bg-dark text-center p-3 mt-4">
         <p class="small">&copy;Todos los derechos reservados a la Escuela Superior de Cómputo</p>
     </div>
 
