--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         <!--Student Card-->
         <div class="col-md-6 mt-3">
           <div class="card bg-dark p-5">
-            <a href="/../Proyecto WEB/formulario.html"><img class="card-img-top zoom" src="/../Proyecto WEB/img/estudiante.png" alt="Estudiante"></a>
+            <a href="/../Proyecto WEB/php/formulario.php"><img class="card-img-top zoom" src="/../Proyecto WEB/img/estudiante.png" alt="Estudiante"></a>
             <div class="card-body">
               <h5 class="card-title">Estudiante</h5>
               <p class="card-text">Selecciona si eres un estudiante.</p>
-              <a href="/../Proyecto WEB/formulario.html" class="btn btn-outline-primary btn-block">Acceder <i class="fas fa-sign-in-alt"></i></a>
+              <a href="/../Proyecto WEB/php/formulario.php" class="btn btn-outline-primary btn-block">Acceder <i class="fas fa-sign-in-alt"></i></a>
             </div>
           </div>
         </div>
