--- a/recuperar.html
+++ b/recuperar.html
@@ -31,7 +31,7 @@
             <p>Ingrese su número de boleta para recuperar su PDF</p>
             <!--Botón para regresar-->
             <div class="col text-center mt-4">
-                <a href="/../Proyecto WEB/formulario.html" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
+                <a href="/../Proyecto WEB/php/formulario.php" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
             </div>
         </div>
     </div>
