asignacion de grupos y variables de sesion

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
     <title>Bienvenido</title>
+
 </head>
 
 <body>
@@ -73,11 +74,11 @@
         <!--Student Card-->
         <div class="col-md-6 mt-3">
           <div class="card bg-dark p-5">
-            <a href="/../Proyecto WEB/php/formulario.php"><img class="card-img-top zoom" src="/../Proyecto WEB/img/estudiante.png" alt="Estudiante"></a>
+            <a href="/../Proyecto WEB/php/crearSesionAlumno.php"><img class="card-img-top zoom" src="/../Proyecto WEB/img/estudiante.png" alt="Estudiante"></a>
             <div class="card-body">
               <h5 class="card-title">Estudiante</h5>
               <p class="card-text">Selecciona si eres un estudiante.</p>
-              <a href="/../Proyecto WEB/php/formulario.php" class="btn btn-outline-primary btn-block">Acceder <i class="fas fa-sign-in-alt"></i></a>
+              <a href="/../Proyecto WEB/php/crearSesionAlumno.php" class="btn btn-outline-primary btn-block">Acceder <i class="fas fa-sign-in-alt"></i></a>
             </div>
           </div>
         </div>
