--- a/buscar.html
+++ b/buscar.html
@@ -31,6 +31,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="/../Proyecto WEB/js/bootstrap.min.js"></script>
+    <script src="/../Proyecto WEB/js/validacionForm.js"></script>
+    <script src="/../Proyecto WEB/js/valForm.js"></script>
 
     <title>Buscar Alumno</title>
 </head>
@@ -39,13 +41,13 @@
 <body>
     <!--Jumbotron-->
     <div class="jumbotron jumbotron-fluid rounded-0 img-jmbo text-center" style="margin-bottom:0">
-    <div class="container"><br>
-        <h1 id="Bienvenido"><i class="fas fa-user-graduate"></i> Buscar registro de alumno</h1>
-        <p>Por favor, ingrese el número de boleta del estudiante</p>
-        <div class="col text-center mt-4">
-            <a href="/../Proyecto WEB/php/Administrador.php" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
+        <div class="container"><br>
+            <h1 id="Bienvenido"><i class="fas fa-user-graduate"></i> Buscar registro de alumno</h1>
+            <p>Por favor, ingrese el número de boleta del estudiante</p>
+            <div class="col text-center mt-4">
+                <a href="/../Proyecto WEB/php/Administrador.php" class="btn btn-success" role="button"><i class="fas fa-arrow-circle-left"></i> Regresar</a>
+            </div>
         </div>
-    </div>
     </div>
 
     <!--Contenedor Administrador-->
@@ -59,7 +61,8 @@
             <form action="/../Proyecto WEB/php/InfoAlumno.php" method="POST" onsubmit="return valCampo()" class="needs-validation" autocomplete="off" novalidate>
                 <div class="form-group">
                     <label for="txtnumero">No. de boleta<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" maxlength="10" id="txtnumero" name="txtnumero" required><div class="valid-feedback">¡Válido!</div><div class="invalid-feedback">Proporcione un no. de boleta válido</div>
+                    <input type="text" class="form-control" maxlength="10" id="txtnumero" name="txtnumero" onkeypress="return valiBoleta(event)" style="text-transform: uppercase;" required>
+
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
@@ -73,15 +76,16 @@
             <small class="d-inline-block text-muted mt-3">Instituto Politécnico Nacional | Escuela Superior de Cómputo | 2021</small>
         </div>
     </div>
-    
+
     <!--Footer-->
     <div class="container-fluid bg-dark text-center p-3 mt-3">
         <p class="small">&copy;Todos los derechos reservados a la Escuela Superior de Cómputo</p>
     </div>
-    
+
     <!--Validacion de formulario por JScript-->
     <script src="/../Proyecto WEB/js/validarCampo.js"></script>
     <script language="javascript" type="text/javascript" src="/../Proyecto WEB/js/script1.js"></script>
     <noscript>El navegador no soporta Javascript</noscript>
 </body>
+
 </html>
